--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "mongoose": "^7.4.3",
+    "mongoose-delete": "^1.0.1",
     "nodemon": "^3.0.1"
   }
 }
