--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "api-query-params": "^5.4.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "joi": "^17.9.2",
     "mongoose": "^7.4.3",
     "mongoose-delete": "^1.0.1",
     "nodemon": "^3.0.1"
