--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
   "builds": [
     {
       "src": "src/server.js",
-      "use": "@now/node"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
 
-      "dest": "src/server.js"
+      "dest": "/"
     }
   ]
 }
