--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/server.js"
-  },
-  "engines": {
-    "node": "18.x"
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
