--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/server.js",
-      "use": "@vercel/node"
+      "src": "server.js",
+      "use": "@now/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
 
-      "dest": "/"
+      "dest": "server.js"
     }
   ]
 }
