--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@now/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-
-      "dest": "server.js"
-    }
-  ],
-
-  "buildCommand": "next build"
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
