--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "@vercel/node": "^3.0.3",
-    "api-query-params": "^5.4.0",
-    "dotenv": "^16.3.1",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
-    "joi": "^17.9.2",
-    "mongoose": "^7.4.3",
-    "mongoose-delete": "^1.0.1",
-    "nodemon": "^3.0.1"
+    "api-query-params": "5.4.0",
+    "dotenv": "16.0.3",
+    "ejs": "3.1.8",
+    "express": "4.18.2",
+    "express-fileupload": "1.4.0",
+    "joi": "17.7.0",
+    "mongodb": "4.13.0",
+    "mongoose": "6.7.2",
+    "mongoose-delete": "0.5.4",
+    "mysql2": "2.3.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
