--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-backend-comment",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
@@ -18,11 +18,11 @@
     "express-fileupload": "1.4.0",
     "joi": "17.7.0",
     "mongodb": "4.13.0",
-    "mongoose": "6.7.2",
+    "mongoose": "^6.12.0",
     "mongoose-delete": "0.5.4",
     "mysql2": "2.3.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.0.1"
   }
 }
